language/move-lang/tests/move_check/typing/unary_not_invalid.exp
error[E04007]: incompatible types
  ┌─ tests/move_check/typing/unary_not_invalid.move:7:10
  │
7 │         !&true;
  │          ^^^^^
  │          │
  │          Invalid argument to '!'
  │          Expected: 'bool'
  │          Given: '&bool'

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/unary_not_invalid.move:8:10
  │
8 │         !&false;
  │          ^^^^^^
  │          │
  │          Invalid argument to '!'
  │          Expected: 'bool'
  │          Given: '&bool'

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/unary_not_invalid.move:9:10
  │
9 │         !0;
  │          ^
  │          │
  │          Invalid argument to '!'
  │          Expected: 'bool'
  │          Given: integer

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/unary_not_invalid.move:10:10
   │
10 │         !1;
   │          ^
   │          │
   │          Invalid argument to '!'
   │          Expected: 'bool'
   │          Given: integer

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/unary_not_invalid.move:11:10
   │
 6 │     fun t0(x: bool, r: R) {
   │                        - Given: '0x8675309::M::R'
   ·
11 │         !r;
   │          ^
   │          │
   │          Invalid argument to '!'
   │          Expected: 'bool'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/unary_not_invalid.move:12:10
   │
 6 │     fun t0(x: bool, r: R) {
   │                        - Given: '0x8675309::M::R'
   ·
12 │         !r;
   │          ^
   │          │
   │          Invalid argument to '!'
   │          Expected: 'bool'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/unary_not_invalid.move:13:10
   │
13 │         !(0, false);
   │          ^^^^^^^^^^
   │          │
   │          Invalid argument to '!'
   │          Expected: 'bool'
   │          Given: '({integer}, bool)'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/unary_not_invalid.move:14:10
   │
14 │         !();
   │          ^^
   │          │
   │          Invalid argument to '!'
   │          Expected: 'bool'
   │          Given: '()'

